# aymond

./: AGENTS.md  Cargo.toml  README.md  compose.yml
aymond/: Cargo.toml
aymond-derive/: Cargo.toml
aymond-derive/src/: batch_get_item.rs  batch_write_item.rs  condition.rs  condition_check.rs  create_table.rs  definition.rs  delete_item.rs  get_builder.rs  get_item.rs  item.rs  lib.rs  marshal.rs  nested_item.rs  put_item.rs  query.rs  query_builder.rs  scan.rs  table.rs  update_item.rs  util.rs
aymond-test/: Cargo.toml  README.md
aymond-test/src/: integ.rs  main.rs
aymond-test/src/integ/: basic.rs  batch_get.rs  batch_write.rs  binary_keys.rs  condition_check.rs  delete_item.rs  mod.rs  no_sort_key.rs  no_table.rs  numeric_keys.rs  option_attribute.rs  scan.rs  secondary_indexes.rs  set_attribute.rs  update_item.rs  version.rs
aymond-test/src/should_compile/: basic.rs  no_sort_key.rs
aymond-test/src/shouldnt_compile/: invalid_gsi_missing_role.rs  invalid_gsi_missing_role.stderr  no_hash_key.rs  no_hash_key.stderr  option_hash_key.rs  option_hash_key.stderr  option_sort_key.rs  option_sort_key.stderr
aymond/src/: condition.rs  error.rs  lib.rs  retry.rs  shim.rs  traits.rs  update.rs
src/dynamodb-enhanced/: Cargo.toml
src/dynamodb-enhanced-derive/: Cargo.toml
src/dynamodb-enhanced-derive/src/: lib.rs
src/dynamodb-enhanced-test/: Cargo.toml
src/dynamodb-enhanced-test/src/: main.rs
src/dynamodb-enhanced/src/: lib.rs  traits.rs
