[package]
name = "aymond-test"
version = "0.0.0"
authors = ["Tanner <t@nner.xyz>"]
description = "A batteries-included client wrapper for DynamoDB"
readme = "../README.md"
homepage = "https://github.com/lightningboltemoji/aymond"
repository = "https://github.com/lightningboltemoji/aymond"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
aymond = { version = "*", path = "../aymond" }
aymond-derive = { version = "*", path = "../aymond-derive" }
tokio = { version = "1.49.0", features = ["full"] }
trybuild = "1.0.115"
