[package]
name = "aymond"
version = "0.1.2"
authors = ["Tanner <t@nner.xyz>"]
description = "A batteries-included client wrapper for DynamoDB"
readme = "../README.md"
homepage = "https://github.com/lightningboltemoji/aymond"
repository = "https://github.com/lightningboltemoji/aymond"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
aws-config = "1.8.13"
aws-credential-types = { version = "1.2.11", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = "1.103.0"
aws-types = "1.3.11"
aymond-derive = { version = "0.1.0", path = "../aymond-derive" }
