[package]
name = "dynamodb-enhanced-test"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-credential-types = { version = "1.2.11", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = "1.104.0"
aws-types = "1.3.11"
dynamodb-enhanced = { version = "0.1.0", path = "../dynamodb-enhanced" }
dynamodb-enhanced-derive = { version = "0.1.0", path = "../dynamodb-enhanced-derive" }
tokio = { version = "1.49.0", features = ["full"] }
