[package]
name = "dynamodb-enhanced"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.13"
aws-credential-types = { version = "1.2.11", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = "1.103.0"
aws-types = "1.3.11"
dynamodb-enhanced-derive = { version = "0.1.0", path = "../dynamodb-enhanced-derive" }
